# CMakeList.txt : CMake project for helping, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("helping")

# Add source to this project's executable.
add_executable (helping "helping.cpp" "helping.h")

# TODO: Add tests and install targets if needed.
